www/Themes/Centreon-2/style.css
/**
Oreon is developped with GPL Licence 2.0 :
http://www.gnu.org/licenses/old-licenses/gpl-2.0.txt
Developped by : Julien Mathis - Romain Le Merlus

Adapted to Pear library by Merethis company, under direction of Cedrick Facon, Romain Le Merlus, Julien Mathis

The Software is provided to you AS IS and WITH ALL FAULTS.
OREON makes no representation and gives no warranty whatsoever,
whether express or implied, and without limitation, with regard to the quality,
safety, contents, performance, merchantability, non-infringement or suitability for
any particular or intended purpose of the Software found on the OREON web site.
In no event will OREON be liable for any direct, indirect, punitive, special,
incidental or consequential damages however they may arise and even if OREON has
been previously advised of the possibility of such damages.

For information : contact@centreon.com
*/

body	{
	background-color:#FFFFFF;
}

/* Defined Polices */
body, input, option, select, tab, div, td, a, textarea{
	font-family: 'Bitstream Vera Sans', arial, Tahoma, 'Sans serif';
	color:#555555;
	font-size: 11px;
	margin: 0;
	padding: 0;
	}

input, select { border: 1px gray solid;}
input, select, option, input, textarea, checkbox	{font-weight: normal;}

img {
	border:0;
	margin:0px;
	padding:0px;
	margin-bottom:-4px;}
	
table	{
	empty-cells: show;
	border-spacing:0px;
	border-collapse:collapse;
	}

checkbox{
	padding: 2px;
	}

select	{
	border-style: none;
	padding-right:1px;
	padding-left:1px;
	}
	
option	{
	padding-right:1px;
	padding-left:1px;
	}
	
td	{
	padding:1px;
	color: #525252;
	}

a		{text-decoration: none;}
a:hover	{text-decoration: underline;}

hr	{	
	border:0;
	background-color: #CCCCCC;
	height: 1px;
	margin-top:3px;
	margin-bottom:10px;
	}
/* Menus */

/* Menu 1 */

#menu_1			{background-image: url("Images/menu_bg.gif");height:28px;background-position:top left;background-repeat:repeat-x;}
#menu_1 li 		{height:24px;    padding-right:1px;    list-style-type: none;    float: left;    text-align: center;    background: url("Images/menu_r.gif") right no-repeat 0px;}
#menu_1 li div	{float: left;    padding-top:3px;    padding-left:7px;    padding-right:3px;    height:24px;}
#menu_1 li a	{font-size:13px; text-decoration: none;    color: #555555;}

/* Menu 2 */

#menu1_bgimg_	{float:left;}
#menu1_bgcolor	{height:28px;}
#menu_2			{padding-bottom:1px;color:#000000;word-spacing:3px;}
#menu_2 a		{font-size:11px;text-decoration:none;color:#555555;padding-left:5px;padding-right:2px;}
.separator_menu2	{color:#BBBBBB;font-weight:bolder;}

/* Menu 3 */

#menu_3 a{			color:#666;}
#menu_3 a:hover{    color:#E8AB5C;}
#menu_3 li{    		padding-left:1px; list-style-type: none;}
#menu_3 {    		padding-bottom:5px;padding-left:50px;}

#menu_3.div{
	background-color: #FEF7DB;
	border: 1px #FDC11E solid;
	-moz-border-radius: 4px;
}

/* Specifique */

.msg{
	font-weight: normal;
	border: 1px solid black;
	padding:3px;
	text-align: center;
	background-color:red;
	color:white;
	margin:5px;
	}

.warn {
	font-weight: normal;
	border: 2px solid white;
	padding:3px;
	text-align: center;
	background-color:orange;
	color:white;
	margin:5px;}

#header{
	height:83px;
	padding-left:20px;
	background: url("Images/bg_banner.gif") top repeat-x;
}

#logo { padding-top:15px;}

/* Footer */

#footer a		{color:#666666;}
#footer			{float:left;width:100%;}
#footerline1	{height:2px;width:100%;}
#footerline2	{height:6px;width:100%;}
.footer a img 		{opacity: 0.5;}
.footer a:hover img {opacity: 1;}

/* Path Way */

.pathWay	{color:#5a5a5a;}
.imgPathWay {border:0;margin:0px;padding:0px;margin-bottom:-2px;}

/* Menu */

#Tcontener	{width:100%;}
#Tmenu		{vertical-align: top;}
#Tmainpage	{width:100%;}
.TcTD		{padding:6px;}

/* Font weight */

.Small	{text-align: center;}


#legend			{display:none;text-align:left;}
#tabLegend		{width:100%;}
#tabLegend td	{
	background-color:#F7FAFF;
	padding:2px;
	padding-right:5px;
	BACKGROUND-COLOR: #E1EBFA;
	BORDER-LEFT: 1px SOLID #F7FAFF;
	BORDER-TOP: 1px SOLID #F7FAFF;
	BORDER-RIGHT: 1px SOLID #ACBED8;
	BORDER-BOTTOM: 1px SOLID #ACBED8;
	PADDING: 1px;
	PADDING-right: 3px;
	PADDING-left: 3px;
	FONT-SIZE: 11px;
	COLOR: #454545;
}

/* RESUME */

#resume_light		{position:absolute;top:10px;right:10px;}
.Resume_light_table {padding: 1px;padding-right: 3px;padding-left: 3px;font-size: 8px;color: #454545;}
.Resume_light_table td	{border: 1px SOLID #AEAEAE;}

.Resume_light_header{
	background-image: url("./Images/bg_header_bluegray.gif");
	background-position:top left;
	background-repeat:repeat-x;
	background-color: #eaeaee;
	color:#666666;}

#logli{
	position:absolute;
	width:350px;
	text-align:right;
	top:50px;
	right:10px;
	color: #525252;
	font-weight: bold;}

#logli a, #logOut a {
	color:#666666;
	}

#linkBar {
	position:absolute;
	width:150px;	
	text-align:right;
	top:110px;
	right:-98px;
	font-weight: bold;}

#linkBar img {
	margin-left: 4px;
}

#date{
	position:absolute;
	top:131px;
	right:20px;
	color:#525252;
	font-weight:bold;
	font-size:10px;
	}
	
#logOut{
	position:absolute;
	top:131px;
	right:10px;
	color: #525252;
	font-weight: bold;}

div.tab {width:100%;}

div.uptodate {
	margin: 3px;
	padding: 3px;
	background-color: #DFF9E0;
	border: 1px #ADC7A1 solid;
	-moz-border-radius: 4px;
}

div.updateSecu {
	margin: 3px;
	padding: 3px;
	background-color: #F9EDED;
	border: 1px #E3858C solid;
	-moz-border-radius: 4px;
}

div.update {
	margin: 3px;
	padding: 3px;
	background-color: #FEF7DB;
	border: 1px #FDC11E solid;
	-moz-border-radius: 4px;
}

div.update_readme {
	margin: 3px;
	padding: 3px;
	background-color: white;
	border: 1px #AEAEAE solid;
	-moz-border-radius: 4px;
}

div.update_output {
	margin: 3px;
	padding: 3px;
	background-color: white;
	border: 1px #AEAEAE solid;
	-moz-border-radius: 4px;
}

#debug{
	overflow: auto;
	height:70px;
	width:310px;
	position:absolute;
	top:2px;
	left:200px;
}
/*  Arbo ACL */

.arbo_d	{list-style:none; margin-left:60px;padding-top:5px;margin-left:16px;}
.arbo_a {margin-left:30px;padding-top:0px;}
.arbo_a li{list-style:none;padding-top:1px;margin-left:0px;padding-left:0px;}
.arbo_b {display:none;margin-left:40px;padding-top:1px;}
.arbo_c {display:none;padding-top:0px;margin-left:50px;}
.arbo_d	{list-style:none;}

#advanced_options{
	display:none;
}

div.left_menu {
	margin: 3px;
	padding: 3px;
	padding-bottom: 10px;
	float: center;
	background-color: #FFFFFF;
	border: 1px #cccccc solid;
	-moz-border-radius: 8px;
}

div.graph_footer {
	margin: 3px;
	padding: 3px;
	width: 450px;
	float: center;
	background-color: #EEEEEE;
	border: 1px #424242 solid;
	-moz-border-radius: 4px;
}

div.displayAjaxResult {
	width: 200px;
	background-color: #FEF7DB;
	border: 1px #FDC11E solid;
	-moz-border-radius: 4px;
	top:50px;
	left:350px;
	text-align:center;
	overflow: auto;
	position: absolute;
	marging-left: 550px;
}

/* Info Bulle */

a.infobulle				{position:relative;z-index:24;text-decoration:none}
a.infobulle:hover		{z-index:25;}
a.infobulle span		{display: none;position: absolute;display:none;z-index: 500;}
	/* le contenu de la balise span ne sera visible que pour l'état a:hover */
a.infobulle:hover span	{display:block;position:absolute;top:2em;left:2em;text-align: justify;font-weight:none;padding:4px;background-color:white;border: 1px gray solid;-moz-border-radius: 14px;}
a.infobulle:hover table	{border: 1px gray solid;}
a.infobulle:hover td	{padding:1px;}

.ColPopup{
	white-space:nowrap;
}

.bulleDashtab	{width:100%;border-collapse:separate;}
.bulleDashtab td{background-color:#e0e0ea;border-collapse:separate;border: 0.5px solid white;}
.bulleDash		{font-size:12px;padding:2px;padding-right:5px;padding-left:5px;text-align:right;}
.bulleDashleft	{font-size:12px;padding:2px;padding-right:5px;padding-left:5px;text-align:left;}


.ListHeaderPopup		{background-color:white;border-left:none 0px red;font-weight: bold;}
.ListHeaderPopup td		{border:solid 0px red;}


/* END Info Bulles */

.list_separator{
//    background-color:#AAFFFF;
}
.separator{
	font-color:black;
	font-weight: bold;
	font-style: italic;
}


/*monitoring*/
.host_error{
	background-color:#FD8B46;
	border: 2px #FD8B46 solid;
	-moz-border-radius: 8px;
}

.img_volante{
	position: absolute;
	display:none;
	z-index: 500;
}


.search_input_active{
	background-color:red;
}


.log_option{
	margin-top:0px;
	margin-bottom:-5px;
	padding-bottom:0px;
	border-collapse:separate;
	empty-cells: show; 
	background-color:#aeaeee;
	border: 2px #aeaeee solid;
	-moz-border-radius: 8px;
}

.log_option td{
	padding-top:2px;
	padding-bottom:2px;
	padding-left:4px;
	padding-right:4px;
}

.log_option table td{
	background-color:#ceceee;

}

.log_option input{
	margin-right:5px;
}


.period td{
	padding-top:1px;
	padding-bottom:1px;
	padding-left:8px;
	padding-right:8px;
}

.period{
	margin-top:0px;
	padding-bottom:0px;
	border-collapse:separate;
	empty-cells: show; 
	background-color:#aeaeee;
	border: 2px #aeaeee solid;
	-moz-border-radius: 8px;
}

.graph_options td{
	padding-top:1px;
	padding-bottom:1px;
	padding-left:8px;
	padding-right:8px;
}

.graph_options input{
	margin-right:5px;
}

.graph_options{
	margin-top:0px;
	padding-bottom:0px;
	border-collapse:separate;
	empty-cells: show; 
	background-color:#aeaeee;
	border: 2px #aeaeee solid;
	-moz-border-radius: 8px;	
}

div.pagination{
	margin-left: 40%;
}

.tacticakDiv{border: 1px #CCCCCC solid;}
#hostStats {
	margin-bottom: 20px;
	margin-top: 10px;
	border: 1px #CCCCCC solid;
}
#serviceStats {
	margin-bottom: 20px;
	border: 1px #CCCCCC solid;
}
#unhandledproblems {
	margin-bottom: 20px;
	border: 1px #CCCCCC solid;
}

.SubTableTactical{
	pargin : 2px;
	//background-color:#aeaeee;
}

.SubTableTactical td{
	pargin : 2px;
	vertical-align:top;
	width:120px;
	background-color:#E6E6E6;
}

.SubTable2Tactical td{
	pargin : 2px;
	vertical-align:top;
	width:120px;
}

.SubTableTactical table {margin:3px;}

.SubTacticalDT{
	pargin : 2px;
	border: 2px #FFFFFF solid;
	background-color:#D9D9D9;
}

#tactical_light		{position:absolute;top:10px;right:10px;}
.tactical_light_table {padding: 1px;padding-right: 3px;padding-left: 3px;font-size: 8px;color: #454545;}
.tactical_light_table td	{border: 1px SOLID #AEAEAE; width:120px;}

.tactical_light_header{
	background-image: url("./Images/bg_header_bluegray.gif");
	background-position:top left;
	background-repeat:repeat-x;
	background-color: #eaeaee;
	color:#666666;}

.tacWarn 	{background-color:#F8C706;}
.tacPB 		{background-color:#2AD1D4;}

